@@ -23,6 +23,7 @@ extern const GstTTMLToken *GstTTMLUtilsTokensTextAlign;
 extern const GstTTMLToken *GstTTMLUtilsTokensDisplayAlign;
 extern const GstTTMLToken *GstTTMLUtilsTokensWrapOption;
 extern const GstTTMLToken *GstTTMLUtilsTokensShowBackground;
+extern const GstTTMLToken *GstTTMLUtilsTokensTimeBase;
 extern const GstTTMLToken *GstTTMLUtilsTokensSMPTEImageType;
 extern const GstTTMLToken *GstTTMLUtilsTokensSMPTEEncoding;
 
