@@ -1,3 +1,14 @@
+2015-02-20  Xavi Artigas  <xartigas@fluendo.com>
+
+	* src\gstttmlattribute.c:
+	* src\gstttmlattribute.h:
+	* src\gstttmlenums.h:
+	* src\gstttmlstate.c:
+	* src\gstttmlstate.h:
+	* src\gstttmlutils.c:
+	Initial support for the timeBase attribute (only 'media' and 'clock') values
+	are accepted, and 'clock' assumes 'local' clockMode.
+
 2015-02-19  Xavi Artigas  <xartigas@fluendo.com>
 
 	* src/gstttmlattribute.c: (gst_ttml_attribute_parse):
